--- a/Backend/.env
+++ b/Backend/.env
@@ -1,3 +1,3 @@
 PORT = 4000
-MONGO_URI = mongodb+srv://nirajvadher:Niraj0711@cluster0.koaor0j.mongodb.net/?retryWrites=true&w=majority
+MONGO_URI = 
             
